crates/panache-parser/tests/snapshots/yaml__yaml_suite_U9NS.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: U9NS
input: "---\ntime: 20:03:20\nplayer: Sammy Sosa\naction: strike (miss)\n...\n---\ntime: 20:03:47\nplayer: Sammy Sosa\naction: grand slam\n...\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
