crates/panache-parser/tests/snapshots/yaml__yaml_suite_UDM2.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 871
expression: snapshot
---
case_id: UDM2
input: "- { url: http://example.org }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
