crates/panache-parser/tests/snapshots/yaml__yaml_suite_UT92.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: UT92
input: "---\n{ matches\n% : 20 }\n...\n---\n# Empty\n...\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
