crates/panache-parser/tests/snapshots/yaml__yaml_suite_UV7Q.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: UV7Q
input: "x:\n - x\n  \tx\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
