crates/panache-parser/tests/snapshots/yaml__yaml_suite_W42U.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: W42U
input: "- # Empty\n- |\n block node\n- - one # Compact\n  - two # sequence\n- one: two # Compact mapping\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
