crates/panache-parser/tests/snapshots/yaml__yaml_suite_W5VH.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: W5VH
input: "a: &:@*!$\"<foo>: scalar a\nb: *:@*!$\"<foo>:\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
