crates/panache-parser/tests/snapshots/yaml__yaml_suite_WZ62.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: WZ62
input: "{\n  foo : !!str,\n  !!str : bar,\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
