crates/panache-parser/tests/snapshots/yaml__yaml_suite_X38W.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: X38W
input: "{ &a [a, &b b]: *b, *a : [c, *b, d]}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
